Trigger frontend deployment - update index.html

--- a/Rise.Client/wwwroot/index.html
+++ b/Rise.Client/wwwroot/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Trigger GitHub Actions deployment -->
     <link
       rel="icon"
       type="image/png"
